[package]
name = "rust-gateway-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }
kube = { version = "0.74.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.15.0", features = ["v1_24"] }
# rocket = "0.5.0-rc.2"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
schemars = "0.8.6"
tracing = "0.1.29"
validator = { version = "0.16.0", features = ["derive"] }

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json"]